refactor(workflow): 优化工作流节点处理器实现
- 移除 CompareBuilder 中的 supports 和 getHandlerCount 方法
- 将 LoopStartNodeHandler 中的默认值从 "None" 改为 null
- 修复 McpNodeHandler 中参数映射和返回结果格式
- 将 StartNodeHandler 中的默认值从 "None" 改为 null
- 注释掉 ToolNodeHandler 中的 fileService 参数注入
- 重构 VariableAssignNodeHandler 中的作用域获取和聊天变量更新逻辑
- 修复 VariableSplittingNodeHandler 中空值处理逻辑